--- a/LendXtyle.css
+++ b/LendXtyle.css
@@ -8,7 +8,7 @@
   font-style: normal;
 } */
 
-@import url('https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Hanken+Grotesk:ital,wght@0,100..900;1,100..900&display=swap');
 
 .colored-text {
   color: var(--mainColor);
@@ -19,7 +19,7 @@
 }
 
 * {
-  font-family: 'Space Grotesk', sans-serif;
+  font-family: 'Hanken Grotesk', sans-serif;
   padding: 0;
   margin: 0;
   box-sizing: border-box;
