--- a/LendXtyle.css
+++ b/LendXtyle.css
@@ -1201,7 +1201,6 @@ footer {
   
   .m-u-p-container>p {
     font-size: 18px;
-    text-align: justify;
   }
   
   .m-u-photo {
@@ -1446,22 +1445,22 @@ footer {
   
   .cta-title {
     padding: 10px;
-    font-size: 20px;
+    font-size: 18px;
     text-align: center;
   }
   
   .cta-p {
     color: var(--secundaryColor);
-    font-size: 18px;
+    font-size: 16px;
     font-weight: 600;
-    max-width: 992px;
+    max-width: 300px;
     text-align: center;
     margin-bottom: 35px;
   }
   
   .cta-btn {
-    font-size: 30px;
-    margin: 10px 0;
+    font-size: 22px;
+    margin: 5px 0 10px 0;
     border: solid 5px var(--mainColor);
   }
   
@@ -1499,7 +1498,7 @@ footer {
   }
   
   .contact-form {
-    max-width: 350px;
+    max-width: 330px;
   }
   
   .form-section1 {
